--- a/hw03.ipynb
+++ b/hw03.ipynb
@@ -387,299 +387,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1000,\n",
-       "  1e-05,\n",
-       "  array([ 0.49635334, -0.14077361,  0.64537114,  1.52180641]),\n",
-       "  0.7625205365285943),\n",
-       " (1000,\n",
-       "  0.0001,\n",
-       "  array([ 0.49298574, -0.16321527,  0.62468762,  1.51097412]),\n",
-       "  0.7507528681143767),\n",
-       " (1000,\n",
-       "  0.001,\n",
-       "  array([ 0.44881796, -0.37239011,  0.43599362,  1.42111651]),\n",
-       "  0.6512037362503481),\n",
-       " (1000,\n",
-       "  0.01,\n",
-       "  array([ 0.09249613, -1.16047276, -0.12476714,  1.70921775]),\n",
-       "  0.46129017053513033),\n",
-       " (1000,\n",
-       "  0.1,\n",
-       "  array([ 0.37731566, -2.73985947, -1.18135067,  4.58774123]),\n",
-       "  0.31008783816773305),\n",
-       " (1000,\n",
-       "  1.0,\n",
-       "  array([ 2.48597049, -6.07038967, -5.35080865, 13.29834441]),\n",
-       "  0.17912798140855035),\n",
-       " (1000,\n",
-       "  10.0,\n",
-       "  array([  7.67909566, -14.87816361, -16.60836144,  37.16064425]),\n",
-       "  0.07609858483095079),\n",
-       " (2500,\n",
-       "  1e-05,\n",
-       "  array([ 0.49580707, -0.14453168,  0.64190222,  1.51997866]),\n",
-       "  0.7605341625423251),\n",
-       " (2500,\n",
-       "  0.0001,\n",
-       "  array([ 0.4869033 , -0.20003792,  0.59091831,  1.49364441]),\n",
-       "  0.7318604267936508),\n",
-       " (2500,\n",
-       "  0.001,\n",
-       "  array([ 0.35255638, -0.64701881,  0.20326298,  1.35073823]),\n",
-       "  0.553529683587963),\n",
-       " (2500,\n",
-       "  0.01,\n",
-       "  array([ 0.07539529, -1.64646423, -0.37310157,  2.48987528]),\n",
-       "  0.39986903383693095),\n",
-       " (2500,\n",
-       "  0.1,\n",
-       "  array([ 0.88578685, -3.61822338, -2.2468479 ,  6.81067608]),\n",
-       "  0.26178316191818624),\n",
-       " (2500,\n",
-       "  1.0,\n",
-       "  array([ 4.17241929, -8.87258999, -8.71130207, 20.55192377]),\n",
-       "  0.12787131522793557),\n",
-       " (2500,\n",
-       "  10.0,\n",
-       "  array([ 10.83614711, -19.86938832, -24.93515891,  53.41742399]),\n",
-       "  0.051101146739921575),\n",
-       " (4000,\n",
-       "  1e-05,\n",
-       "  array([ 0.49525476, -0.14828265,  0.63844195,  1.51815984]),\n",
-       "  0.7585570630864877),\n",
-       " (4000,\n",
-       "  0.0001,\n",
-       "  array([ 0.48025955, -0.23611318,  0.55804774,  1.47723535]),\n",
-       "  0.7138899078926471),\n",
-       " (4000,\n",
-       "  0.001,\n",
-       "  array([ 0.26349393, -0.82517301,  0.06781298,  1.36854644]),\n",
-       "  0.5135534607316243),\n",
-       " (4000,\n",
-       "  0.01,\n",
-       "  array([ 0.13189913, -1.98313357, -0.57227105,  3.07313282]),\n",
-       "  0.36657662746472874),\n",
-       " (4000,\n",
-       "  0.1,\n",
-       "  array([ 1.29570475, -4.23070273, -3.05226022,  8.45829216]),\n",
-       "  0.23565484323609742),\n",
-       " (4000,\n",
-       "  1.0,\n",
-       "  array([  5.18989347, -10.62950709, -10.84388812,  25.15863368]),\n",
-       "  0.10774430648236381),\n",
-       " (4000,\n",
-       "  10.0,\n",
-       "  array([ 13.05342884, -23.28709399, -30.96565077,  65.00676975]),\n",
-       "  0.03854025240930635),\n",
-       " (5500,\n",
-       "  1e-05,\n",
-       "  array([ 0.49469643, -0.15202651,  0.63499035,  1.51634998]),\n",
-       "  0.756589234990682),\n",
-       " (5500,\n",
-       "  0.0001,\n",
-       "  array([ 0.47308836, -0.27141392,  0.52609881,  1.46176404]),\n",
-       "  0.6968368845676594),\n",
-       " (5500,\n",
-       "  0.001,\n",
-       "  array([ 0.19622155, -0.94037944, -0.00779956,  1.43648092]),\n",
-       "  0.4945192164147386),\n",
-       " (5500,\n",
-       "  0.01,\n",
-       "  array([ 0.19428576, -2.23563182, -0.7453947 ,  3.54074979]),\n",
-       "  0.34541580504782443),\n",
-       " (5500,\n",
-       "  0.1,\n",
-       "  array([ 1.64731507, -4.76075662, -3.73075806,  9.86857524]),\n",
-       "  0.21659930867748334),\n",
-       " (5500,\n",
-       "  1.0,\n",
-       "  array([  5.93757522, -11.92680039, -12.48335584,  28.65502881]),\n",
-       "  0.09625740402300689),\n",
-       " (5500,\n",
-       "  10.0,\n",
-       "  array([ 14.80150402, -25.98081222, -35.72437106,  74.14989725]),\n",
-       "  0.03073976406389096),\n",
-       " (7000,\n",
-       "  1e-05,\n",
-       "  array([ 0.49413212, -0.15576322,  0.63154745,  1.51454909]),\n",
-       "  0.7546306750053725),\n",
-       " (7000,\n",
-       "  0.0001,\n",
-       "  array([ 0.46542784, -0.30591151,  0.49509441,  1.44724667]),\n",
-       "  0.6806962867180236),\n",
-       " (7000,\n",
-       "  0.001,\n",
-       "  array([ 0.1483803 , -1.02546349, -0.05619918,  1.52394126]),\n",
-       "  0.48144474858484454),\n",
-       " (7000,\n",
-       "  0.01,\n",
-       "  array([ 0.25668596, -2.43524671, -0.90169667,  3.93473214]),\n",
-       "  0.33048980157040564),\n",
-       " (7000,\n",
-       "  0.1,\n",
-       "  array([ 1.95702718, -5.2367944 , -4.32704421, 11.12239969]),\n",
-       "  0.20158181059788008),\n",
-       " (7000,\n",
-       "  1.0,\n",
-       "  array([  6.54181295, -12.96685253, -13.86338164,  31.55027066]),\n",
-       "  0.08841689298060502),\n",
-       " (7000,\n",
-       "  10.0,\n",
-       "  array([ 16.24197542, -28.20324769, -39.64097994,  81.68064958]),\n",
-       "  0.025453903931937038),\n",
-       " (8500,\n",
-       "  1e-05,\n",
-       "  array([ 0.49356184, -0.15949277,  0.62811325,  1.51275719]),\n",
-       "  0.752681379804263),\n",
-       " (8500,\n",
-       "  0.0001,\n",
-       "  array([ 0.45731996, -0.33957596,  0.46505736,  1.43369836]),\n",
-       "  0.6654621810682864),\n",
-       " (8500,\n",
-       "  0.001,\n",
-       "  array([ 0.11517511, -1.09657705, -0.09304169,  1.61669294]),\n",
-       "  0.47068040634645714),\n",
-       " (8500,\n",
-       "  0.01,\n",
-       "  array([ 0.31776013, -2.59955933, -1.04595136,  4.27861213]),\n",
-       "  0.31915393951935606),\n",
-       " (8500,\n",
-       "  0.1,\n",
-       "  array([ 2.23396751, -5.67007345, -4.86183743, 12.25590229]),\n",
-       "  0.1893368061282585),\n",
-       " (8500,\n",
-       "  1.0,\n",
-       "  array([  7.05785905, -13.84297671, -15.08496243,  34.07120412]),\n",
-       "  0.08248807223470478),\n",
-       " (8500,\n",
-       "  10.0,\n",
-       "  array([ 17.46374206, -30.0903647 , -42.9589006 ,  88.06472656]),\n",
-       "  0.02165797456647033),\n",
-       " (10000,\n",
-       "  1e-05,\n",
-       "  array([ 0.49298562, -0.16321512,  0.62468779,  1.5109743 ]),\n",
-       "  0.7507413459865622),\n",
-       " (10000,\n",
-       "  0.0001,\n",
-       "  array([ 0.44881007, -0.37237626,  0.43601001,  1.42113302]),\n",
-       "  0.6511273656414657),\n",
-       " (10000,\n",
-       "  0.001,\n",
-       "  array([ 0.0926064 , -1.1604244 , -0.12471545,  1.70919609]),\n",
-       "  0.46124229412031637),\n",
-       " (10000,\n",
-       "  0.01,\n",
-       "  array([ 0.37709968, -2.73927415, -1.18092674,  4.58661313]),\n",
-       "  0.31007008824526155),\n",
-       " (10000,\n",
-       "  0.1,\n",
-       "  array([ 2.48428253, -6.06769399, -5.34752279, 13.29132815]),\n",
-       "  0.17913801076487143),\n",
-       " (10000,\n",
-       "  1.0,\n",
-       "  array([  7.51455015, -14.6061865 , -16.19944717,  36.33694941]),\n",
-       "  0.07770615309860295),\n",
-       " (10000,\n",
-       "  10.0,\n",
-       "  array([ 18.52237188, -31.72697697, -45.83090333,  93.59395085]),\n",
-       "  0.018812211410484607),\n",
-       " (11500,\n",
-       "  1e-05,\n",
-       "  array([ 0.49240349, -0.16693026,  0.62127109,  1.50920043]),\n",
-       "  0.748810570079116),\n",
-       " (11500,\n",
-       "  0.0001,\n",
-       "  array([ 0.43994633, -0.40428099,  0.40797387,  1.40956294]),\n",
-       "  0.6376827964959348),\n",
-       " (11500,\n",
-       "  0.001,\n",
-       "  array([ 0.07770375, -1.21977229, -0.15377692,  1.79946314]),\n",
-       "  0.45274686059899716),\n",
-       " (11500,\n",
-       "  0.01,\n",
-       "  array([ 0.43462399, -2.86128517, -1.30837872,  4.86785902]),\n",
-       "  0.3024956425293996),\n",
-       " (11500,\n",
-       "  0.1,\n",
-       "  array([ 2.71249921, -6.43493909, -5.7926987 , 14.24460744]),\n",
-       "  0.17050749421680314),\n",
-       " (11500,\n",
-       "  1.0,\n",
-       "  array([  7.92867852, -15.28757566, -17.23568625,  38.41687482]),\n",
-       "  0.07368001554248496),\n",
-       " (11500,\n",
-       "  10.0,\n",
-       "  array([ 19.45497953, -33.1697978 , -48.35896244,  98.46323012]),\n",
-       "  0.016606174667142783),\n",
-       " (13000,\n",
-       "  1e-05,\n",
-       "  array([ 0.49181548, -0.17063816,  0.61786318,  1.50743561]),\n",
-       "  0.7468890485384339),\n",
-       " (13000,\n",
-       "  0.0001,\n",
-       "  array([ 0.43077895, -0.43525914,  0.38096889,  1.3989984 ]),\n",
-       "  0.6251168903622882),\n",
-       " (13000,\n",
-       "  0.001,\n",
-       "  array([ 0.06832696, -1.27583204, -0.18127987,  1.88687129]),\n",
-       "  0.4449927818903493),\n",
-       " (13000,\n",
-       "  0.01,\n",
-       "  array([ 0.49038297, -2.97021952, -1.42951022,  5.12848742]),\n",
-       "  0.29598738380963896),\n",
-       " (13000,\n",
-       "  0.1,\n",
-       "  array([ 2.92210093, -6.77598706, -6.20380898, 15.12796798]),\n",
-       "  0.16310664938576785),\n",
-       " (13000,\n",
-       "  1.0,\n",
-       "  array([  8.31076292, -15.90747239, -18.21108996,  40.35436245]),\n",
-       "  0.07018818088965581),\n",
-       " (13000,\n",
-       "  10.0,\n",
-       "  array([ 20.28752722, -34.45856306, -50.61430053, 102.80882508]),\n",
-       "  0.014849469284770687),\n",
-       " (14500,\n",
-       "  1e-05,\n",
-       "  array([ 0.49122161, -0.17433878,  0.61446407,  1.50567985]),\n",
-       "  0.7449767777525779),\n",
-       " (14500,\n",
-       "  0.0001,\n",
-       "  array([ 0.42135945, -0.46528104,  0.35501273,  1.38944705]),\n",
-       "  0.6134147722560437),\n",
-       " (14500,\n",
-       "  0.001,\n",
-       "  array([ 0.0629479 , -1.32919505, -0.2076871 ,  1.97131142]),\n",
-       "  0.43785496414057273),\n",
-       " (14500,\n",
-       "  0.01,\n",
-       "  array([ 0.54447649, -3.06928179, -1.54520017,  5.37278932]),\n",
-       "  0.29026482114102287),\n",
-       " (14500,\n",
-       "  0.1,\n",
-       "  array([ 3.11583657, -7.09423401, -6.58588274, 15.95112946]),\n",
-       "  0.1566878858292425),\n",
-       " (14500,\n",
-       "  1.0,\n",
-       "  array([  8.66774347, -16.47977316, -19.1368115 ,  42.17803483]),\n",
-       "  0.06709537588682919),\n",
-       " (14500,\n",
-       "  10.0,\n",
-       "  array([ 21.03884034, -35.62212972, -52.6484788 , 106.72947318]),\n",
-       "  0.013419759526532304)]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "results"
+    "#results"
    ]
   },
   {
@@ -712,6 +422,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 21.03884034, -35.62212972, -52.6484788 , 106.72947318])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W = min[2]\n",
+    "W"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -722,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Создайте функцию calc_pred_proba, возвращающую предсказанную вероятность класса 1 (на вход подаются W, который уже посчитан функцией eval_model и X, на выходе - массив y_pred_proba).\n"
+    "**Создайте функцию calc_pred_proba, возвращающую предсказанную вероятность класса 1 (на вход подаются W, который уже посчитан функцией eval_model и X, на выходе - массив y_pred_proba).**\n"
    ]
   },
   {
@@ -734,18 +465,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_pred_proba(W, X):\n",
-    "    y_pred_proba = sigmoid(np.dot(W, X.T))\n",
+    "    y_pred_proba = sigmoid(np.dot(X,W))\n",
     "    return y_pred_proba"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -756,13 +487,13 @@
        "       9.39341604e-01, 1.00000000e+00])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred_proba = calc_pred_proba(min[2], X_st)\n",
+    "y_pred_proba = calc_pred_proba(W, X_st)\n",
     "y_pred_proba"
    ]
   },
@@ -777,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Создайте функцию calc_pred, возвращающую предсказанный класс (на вход подаются W, который уже посчитан функцией eval_model и X, на выходе - массив y_pred)."
+    "**Создайте функцию calc_pred, возвращающую предсказанный класс (на вход подаются W, который уже посчитан функцией eval_model и X, на выходе - массив y_pred).**"
    ]
   },
   {
@@ -789,43 +520,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-2e7da51787ce>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-21-2e7da51787ce>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    def calc_pred(min[2], X, treshold=0.5):\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def calc_pred(min[2], X, treshold=0.5):\n",
-    "    y_pred = sigmoid(np.dot(W, X.T)) > treshold\n",
-    "    return y_pred.astype(int)"
+    "def calc_pred(W, X):\n",
+    "    y_pred = calc_pred_proba(W, X)\n",
+    "    y_pred = np.where(y_pred > 0.5,1,0)\n",
+    "    return y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'calc_pred' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-f11b1d4ad83d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalc_pred\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_st\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'calc_pred' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1, 0, 1, 0, 1, 0, 1, 1])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred = calc_pred(min[2], X_st)\n",
+    "y_pred = calc_pred(W, X_st)\n",
     "y_pred"
    ]
   },
@@ -840,7 +562,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Реализуйте функции для подсчета Accuracy, матрицы ошибок, точности и полноты, а также F1 score."
+    "**Реализуйте функции для подсчета Accuracy, матрицы ошибок, точности и полноты, а также F1 score.**"
    ]
   },
   {
@@ -852,16 +574,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "1.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,16 +647,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5, 4, 0, 1)"
+       "(5, 5, 0, 0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,13 +668,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall = calc_recall(matrix)\n",
+    "recall"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8333333333333334"
+       "1.0"
       ]
      },
      "execution_count": 27,
@@ -961,8 +704,8 @@
     }
    ],
    "source": [
-    "recall = calc_recall(matrix)\n",
-    "recall"
+    "precision = calc_precision(matrix)\n",
+    "precision"
    ]
   },
   {
@@ -982,27 +725,6 @@
     }
    ],
    "source": [
-    "precision = calc_precision(matrix)\n",
-    "precision"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9090909090909091"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "calc_f_score(precision, recall)"
    ]
   },
@@ -1017,7 +739,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Могла ли модель переобучиться? Почему?"
+    "**Могла ли модель переобучиться? Почему?**"
    ]
   },
   {
@@ -1026,7 +748,7 @@
    "source": [
     "### Решение\n",
     "\n",
-    "Вероятно не могла - очень мало данных"
+    "Думаю что могла, если большое количество итераций, тогда ошибка будет стремиться к нулю."
    ]
   },
   {
