--- a/hw08.ipynb
+++ b/hw08.ipynb
@@ -8,6 +8,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Да, можно. Собстввенно в этом и заключается метод PCA в поиске  наиболее значемых признаков, "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задание 2. (*) Написать свою реализацию метода главных компонент с помощью сингулярного разложения с использованием функции numpy.linalg.svd() ###"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -88,8 +102,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Функция реализации метода главных компонент с помощью сингулярного разложения с использованием функции numpy.linalg.svd()**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pca_sdv(X, d=1):\n",
+    "    X_T_X = X.T @ X\n",
+    "    U, s, W = np.linalg.svd(X_T_X)\n",
+    "\n",
+    "    # Транспонируем матрицу W\n",
+    "    V = W.T\n",
+    "    \n",
+    "    pairs = sorted([[idx, item] for idx, item in enumerate(s)], key=lambda item: item[1])\n",
+    "    pairs.reverse()\n",
+    "    \n",
+    "    pairs = np.array(pairs, dtype=int)\n",
+    "    \n",
+    "    max_pairs = pairs[:d]\n",
+    "    max_ids = max_pairs[:, 0]\n",
+    "    \n",
+    "    WEIGHTS = V[max_ids].T\n",
+    "    \n",
+    "    return X @ WEIGHTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +145,99 @@
        "(150, 4)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X, y = load_iris(return_X_y=True)\n",
+    "X,y = load_iris(return_X_y=True)\n",
+    "\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Для начала отмасштабируем выборку\n",
+    "X = X.astype(float)\n",
+    "\n",
+    "X = standard_scale(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_ = pca_sdv(X, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_, y,\n",
+    "                                                    test_size=0.2,\n",
+    "                                                    random_state=24,\n",
+    "                                                    stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Точность алгоритма на трейне при k = 100: 0.708\n",
+      "Точность алгоритма на тесте при k = 100: 0.567\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 100\n",
+    "\n",
+    "y_pred_train = knn(X_train, y_train, X_train, k)\n",
+    "y_pred = knn(X_train, y_train, X_test, k)\n",
+    "\n",
+    "print(f'Точность алгоритма на трейне при k = {k}: {accuracy(y_pred_train, y_train):.3f}')\n",
+    "print(f'Точность алгоритма на тесте при k = {k}: {accuracy(y_pred, y_test):.3f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задание 3. (*) Обучить любую модель классификации на датасете IRIS до применения PCA и после него. Сравнить качество классификации по отложенной выборке. ###"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150, 4)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X,y = load_iris(return_X_y=True)\n",
     "\n",
     "X.shape"
    ]
@@ -118,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -154,19 +287,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Для начала отмасштабируем выборку\n",
+    "# Отмасштабируем выборку\n",
     "X = X.astype(float)\n",
     "\n",
-    "X = standard_scale(X)\n"
+    "X = standard_scale(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -310,20 +443,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_cutted = X[:, :2]"
+    "X_cut = X[:, :2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X_cutted, y,\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_cut, y,\n",
     "                                                    test_size=0.2,\n",
     "                                                    random_state=24,\n",
     "                                                    stratify=y)"
@@ -331,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -407,16 +540,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### До применения PCA на 4-х признаках:\n",
-    "Точность алгоритма на трейне при k = 100: 0.500\n",
+    "### До применения PCA на 4-х исходных признаках:\n",
+    "Точность алгоритма на трейне при k = 100: 0.500 \\\n",
     "Точность алгоритма на тесте при k = 100: 0.467\n",
     "\n",
     "### При отбрасывании двух последних малозначащих признаков\n",
-    "Точность алгоритма на трейне при k = 100: 0.758\n",
+    "Точность алгоритма на трейне при k = 100: 0.758 \\\n",
     "Точность алгоритма на тесте при k = 100: 0.633\n",
     "\n",
     "### После применения PCA\n",
-    "Точность алгоритма на трейне при k = 100: 0.667\n",
+    "Точность алгоритма на трейне при k = 100: 0.667 \\\n",
     "Точность алгоритма на тесте при k = 100: 0.600"
    ]
   },
@@ -426,77 +559,6 @@
    "source": [
     "**При применении PCA наблюдаем увеличение качества модели на 10-17%**<br>\n",
     "**При отбрасывании малозначащих признаков наблюдаем увеличение качества модели на 20-25%**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pca_sdv(X, d=1):\n",
-    "    X_T_X = X.T @ X\n",
-    "    U, s, W = np.linalg.svd(X_T_X)\n",
-    "\n",
-    "    # Транспонируем матрицу W\n",
-    "    V = W.T\n",
-    "    \n",
-    "    pairs = sorted([[idx, item] for idx, item in enumerate(s)], key=lambda item: item[1])\n",
-    "    pairs.reverse()\n",
-    "    \n",
-    "    pairs = np.array(pairs, dtype=int)\n",
-    "    \n",
-    "    max_pairs = pairs[:d]\n",
-    "    max_ids = max_pairs[:, 0]\n",
-    "    \n",
-    "    WEIGHTS = V[max_ids].T\n",
-    "    \n",
-    "    return X @ WEIGHTS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_ = pca_sdv(X, 2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X_, y,\n",
-    "                                                    test_size=0.2,\n",
-    "                                                    random_state=24,\n",
-    "                                                    stratify=y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Точность алгоритма на трейне при k = 100: 0.708\n",
-      "Точность алгоритма на тесте при k = 100: 0.567\n"
-     ]
-    }
-   ],
-   "source": [
-    "k = 100\n",
-    "\n",
-    "y_pred_train = knn(X_train, y_train, X_train, k)\n",
-    "y_pred = knn(X_train, y_train, X_test, k)\n",
-    "\n",
-    "print(f'Точность алгоритма на трейне при k = {k}: {accuracy(y_pred_train, y_train):.3f}')\n",
-    "print(f'Точность алгоритма на тесте при k = {k}: {accuracy(y_pred, y_test):.3f}')"
    ]
   }
  ],
